--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
   <div class="display"></div>
   </div>
 
-<script src="script.js"></script>
+<script src="script.js">
+   
+
+</script>
 </body>
 </html>
